<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"
        tools:ignore="ContentDescription"/>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/auth_card_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_medial_28"
            android:paddingTop="@dimen/spacing_medial_28">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/auth_title"
                    android:text="@string/auth_screen_title_forgot"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/auth_text_input"
                android:textColorHint="@color/auth_gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email"
                    style="@style/auth_text_input_edit"
                    android:hint="@string/auth_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_restore"
                style="@style/auth_button_login"
                android:text="@string/auth_button_forgot_restore"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>