<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View"/>

        <variable
            name="profile"
            type="com.softdesign.devintensive.ui.viewmodel.ProfileViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--mobile-->
        <LinearLayout
            style="@style/profile_item"
            android:visibility="@{profile.canBeEditable ? View.VISIBLE : View.GONE}">

            <ImageView
                style="@style/profile_item_icon"
                android:src="@drawable/ic_call_24dp"/>

            <android.support.design.widget.TextInputLayout style="@style/profile_item_text_input">

                <EditText
                    style="@style/profile_item_text_input_edit"
                    android:enabled="@{profile.editable}"
                    android:focusable="@{profile.editable}"
                    android:focusableInTouchMode="@{profile.editable}"
                    android:hint="@string/profile_label_mobile_phone"
                    android:text="@={profile.mobilePhoneNumber}"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/image_action_phone"
                style="@style/profile_item_icon"
                android:src="@drawable/ic_phone_msg_24dp"/>
        </LinearLayout>


        <View
            style="@style/profile_item_divider"
            android:visibility="@{profile.canBeEditable ? View.VISIBLE : View.GONE}"/>


        <!--email-->
        <LinearLayout
            style="@style/profile_item"
            android:visibility="@{profile.canBeEditable ? View.VISIBLE : View.GONE}">

            <ImageView
                style="@style/profile_item_icon"
                android:src="@drawable/ic_mail_24dp"/>

            <android.support.design.widget.TextInputLayout style="@style/profile_item_text_input">

                <EditText
                    android:id="@+id/edit_email"
                    style="@style/profile_item_text_input_edit"
                    android:enabled="@{profile.editable}"
                    android:focusable="@{profile.editable}"
                    android:focusableInTouchMode="@{profile.editable}"
                    android:hint="@string/profile_label_email"
                    android:text="@={profile.email}">

                    <requestFocus/>
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/image_action_email"
                style="@style/profile_item_icon"
                android:src="@drawable/ic_send_24dp"/>
        </LinearLayout>


        <View
            style="@style/profile_item_divider"
            android:visibility="@{profile.canBeEditable ? View.VISIBLE : View.GONE}"/>


        <!--vkontakte-->
        <LinearLayout
            style="@style/profile_item"
            android:visibility="@{profile.canBeEditable ? View.VISIBLE : View.GONE}">

            <ImageView
                style="@style/profile_item_icon"
                android:src="@drawable/ic_vk_24dp"/>

            <android.support.design.widget.TextInputLayout style="@style/profile_item_text_input">

                <EditText
                    style="@style/profile_item_text_input_edit"
                    android:enabled="@{profile.editable}"
                    android:focusable="@{profile.editable}"
                    android:focusableInTouchMode="@{profile.editable}"
                    android:hint="@string/profile_label_profile_vk"
                    android:text="@={profile.vkProfileUrl}"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/image_action_vk"
                style="@style/profile_item_icon"
                android:src="@drawable/ic_visibility_24dp"/>
        </LinearLayout>


        <View
            style="@style/profile_item_divider"
            android:visibility="@{profile.canBeEditable ? View.VISIBLE : View.GONE}"/>


        <!--repo-->
        <LinearLayout style="@style/profile_item">

            <ImageView
                style="@style/profile_item_icon"
                android:src="@drawable/ic_github_24dp"/>

            <android.support.design.widget.TextInputLayout style="@style/profile_item_text_input">

                <EditText
                    style="@style/profile_item_text_input_edit"
                    android:enabled="@{profile.editable}"
                    android:focusable="@{profile.editable}"
                    android:focusableInTouchMode="@{profile.editable}"
                    android:hint="@string/profile_label_repository"
                    android:text="@={profile.repository}"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/image_action_repo"
                style="@style/profile_item_icon"
                android:src="@drawable/ic_visibility_24dp"/>
        </LinearLayout>


        <View style="@style/profile_item_divider"/>


        <!--about-->
        <LinearLayout style="@style/profile_item">

            <ImageView
                style="@style/profile_item_icon"
                android:src="@drawable/ic_account_24dp"/>

            <android.support.design.widget.TextInputLayout style="@style/profile_item_text_input">

                <EditText
                    style="@style/profile_item_text_input_edit"
                    android:enabled="@{profile.editable}"
                    android:focusable="@{profile.editable}"
                    android:focusableInTouchMode="@{profile.editable}"
                    android:hint="@string/profile_label_about_me"
                    android:text="@={profile.about}"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </LinearLayout>
</layout>